# data-donuts

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierrc.js  CNAME  Gemfile  README.md  _config.yml  about.md  compose.yml  eleventy.config.js  index.html  mise.toml  netlify.toml  package-lock.json  package.json  pyproject.toml  rsvp.md  speaker-info.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  postAttach.sh
.github/: CODEOWNERS  dependabot.yml
_data/: locations.yml  organisers.yml  speakers.yml
_drafts/: 2020-03-24-data-donuts-31.md  data-donuts-03.md
_includes/: footer.html  head.html  header.html  logos.html
_layouts/: default.html  post.html
_posts/: 2017-02-02-data-donuts-01.md  2017-03-15-data-donuts-02.md  2017-04-19-data-donuts-03.md  2017-05-25-data-donuts-04.md  2017-06-21-data-donuts-05.md  2017-08-23-data-donuts-06.md  2017-09-20-data-donuts-07.md  2017-10-24-data-donuts-08.md  2018-01-10-data-donuts-09.md  2018-02-13-data-donuts-10.md  2018-03-13-data-donuts-11.md  2018-04-11-data-donuts-12.md  2018-05-09-data-donuts-13.md  2018-06-13-data-donuts-14.md  2018-07-19-data-donuts-15.md  2018-09-13-data-donuts-16.md  2018-10-11-data-donuts-17.md  2018-11-13-data-donuts-18.md  2018-12-11-data-donuts-19.md  2019-02-19-data-donuts-20.md  2019-03-12-data-donuts-21.md  2019-05-14-data-donuts-22.md  2019-06-11-data-donuts-23.md  2019-07-11-data-donuts-24.md  2019-08-13-data-donuts-25.md  2019-09-17-data-donuts-26.md  2019-10-10-data-donuts-27.md  2019-11-05-data-donuts-28.md  2019-12-10-data-donuts-29.md  (+14 more)
(+165 files in other folders)
