[project]
name = "data-donuts"
description = "Administrative tasks for the Data + Donuts team"
version = "1.0.0"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.11"
dependencies = []

[project.urls]
code = "https://github.com/compilerla/data-donuts"
tracker = "https://github.com/compilerla/data-donuts/issues"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "ipykernel",
    "pre-commit"
]
qr_codes = [
    "pypng==0.20220715.0",
    "qrcode[pil]==7.4.2",
    "typing_extensions==4.12.2"
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.setuptools]
packages = []
